@@ -12,7 +12,9 @@ import com.wecca.canoeanalysis.models.canoe.Hull;
 import com.wecca.canoeanalysis.models.canoe.HullSection;
 import com.wecca.canoeanalysis.models.function.BoundedUnivariateFunction;
 import com.wecca.canoeanalysis.models.function.CubicBezierFunction;
+import com.wecca.canoeanalysis.models.function.Range;
 import com.wecca.canoeanalysis.models.function.Section;
+import com.wecca.canoeanalysis.services.HullGeometryService;
 import com.wecca.canoeanalysis.services.color.ColorPaletteService;
 import com.wecca.canoeanalysis.utils.CalculusUtils;
 import com.wecca.canoeanalysis.utils.SharkBaitHullLibrary;
@@ -20,16 +22,17 @@ import javafx.beans.value.ChangeListener;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
 import javafx.scene.Cursor;
+import javafx.scene.Group;
 import javafx.scene.control.Button;
 import javafx.scene.control.Label;
 import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.*;
+import javafx.scene.paint.Color;
 import javafx.scene.shape.Circle;
 import javafx.scene.shape.Line;
 import javafx.scene.shape.Rectangle;
 import lombok.Getter;
 import lombok.Setter;
-
 import javafx.geometry.Point2D;
 import java.net.URL;
 import java.util.*;
@@ -60,31 +63,41 @@ public class HullBuilderController implements Initializable {
     private static MainController mainController;
 
     // Refs
-    @Getter
+    @Getter @Setter
     private Hull hull;
-    private List<Knob> knobs;
+    private final Hull sharkBaitHull = SharkBaitHullLibrary.generateSharkBaitHullScaledFromBezier(6);
     private List<ChangeListener<Number>> knobListeners;
 
     // UI & Graphics
     @Getter @Setter
     private AnchorPane hullGraphicPane;
     private CubicBezierSplineHullGraphic hullGraphic;
+    private List<Knob> knobs;
     private Line mouseXTrackerLine;
     private Circle intersectionPoint;
+    private Group intersectionXMark;
     private AnchorPane intersectionPointPane;
-    private List<Section> overlaySections;
 
     // State
+    @Getter @Setter
     private boolean previousPressedBefore;
+    @Getter @Setter
     private boolean nextPressedBefore;
+    @Getter @Setter
     private HullSection selectedHullSection;
+    @Getter @Setter
     private int selectedHullSectionIndex;
+    @Getter @Setter
     private boolean sectionPropertiesSelected;
+    @Getter @Setter
     private int graphicsViewingState;
+    @Getter @Setter
     private boolean sectionEditorEnabled;
+    @Getter @Setter
+    private List<Range> overlaySections;
 
-    // Numerical 'dx' used at bounds to prevent unpredictable boundary behaviour
-    private final double OPEN_INTERVAL_TOLERANCE = 1e-3;
+    // Constants
+    private final double sharkBaitSideViewPanelHeight = 45;
 
     /**
      * Clears the toolbar of buttons from other modules and adds ones from this module
@@ -110,7 +123,6 @@ public class HullBuilderController implements Initializable {
     /**
      * Handler for the pencil button which enables the ability to add or delete knots.
      * The logic here is responsible for immediate UI/state changes
-     *
      * @param event the click event
      */
     private void toggleSectionsEditorMode(MouseEvent event) {
@@ -119,8 +131,8 @@ public class HullBuilderController implements Initializable {
         previousPressedBefore = false;
         selectedHullSectionIndex = -1;
 
-        overlaySections = updateSectionsEditorHullCurveOverlay();
-        updateAddingKnotTitleLabel(isInAddingKnotPointRange(mouseXTrackerLine.getStartX()));
+        updateSectionsEditorHullCurveOverlay();
+        updateAddingKnotTitleLabel(isMouseInAddingKnotPointZone(mouseXTrackerLine.getStartX()));
 
         List<Button> toolBarButtons = mainController.getModuleToolBarButtons();
         Button toggledIconButton = IconButton.getToolbarButton(sectionEditorEnabled ? IconGlyphType.X__PENCIL : IconGlyphType.PENCIL, this::toggleSectionsEditorMode);
@@ -131,14 +143,20 @@ public class HullBuilderController implements Initializable {
         hullViewAnchorPane.setOnMouseExited(sectionEditorEnabled ? e -> hullViewAnchorPane.setCursor(Cursor.DEFAULT) : null);
         hullViewAnchorPane.setOnMouseMoved(sectionEditorEnabled ? this::handleMouseMovedHullViewPane : null);
         if (!sectionEditorEnabled) {
-            intersectionPoint.setOpacity(0);
-            intersectionPoint = null;
+            if (intersectionPoint != null) {
+                intersectionPoint.setOpacity(0);
+                intersectionPoint = null;
+            }
+            hullViewAnchorPane.setOnMouseClicked(null);
+            intersectionXMark.setOpacity(0);
             poiTitleLabel.setText("");
             poiDataLabel.setText("");
         }
         else {
             updateHullIntersectionPointDisplay(hull.getLength() / 2, hull.getMaxHeight());
+            hullViewAnchorPane.setOnMouseClicked(this::handleKnotEditingClick);
         }
+
         if (selectedHullSection != null) hullGraphic.recolor(!sectionEditorEnabled);
         hullGraphic.setColoredSectionIndex(-1);
 
@@ -161,6 +179,7 @@ public class HullBuilderController implements Initializable {
                     knobs.get(i).valueProperty().addListener(knobListeners.get(i));
                 }
                 if (intersectionPoint != null) intersectionPoint.setOpacity(0);
+                if (intersectionXMark != null) intersectionXMark.setOpacity(0);
             }
         }
 
@@ -170,9 +189,10 @@ public class HullBuilderController implements Initializable {
             mouseXTrackerLine.setStroke(ColorPaletteService.getColor("white"));
             mouseXTrackerLine.setOpacity(0.7);
             mouseXTrackerLine.getStrokeDashArray().setAll(5.0, 9.0);
-            mouseXTrackerLine.setStartX(hullViewAnchorPane.getWidth() / 2);
-            mouseXTrackerLine.setEndX(hullViewAnchorPane.getWidth() / 2);
-            updateMouseLinePoint(new Point2D(hullGraphicPane.getWidth() / 2, hullGraphicPane.getHeight()));
+            double halfWidth = hullViewAnchorPane.getWidth() / 2;
+            mouseXTrackerLine.setStartX(halfWidth);
+            mouseXTrackerLine.setEndX(halfWidth);
+            updateMouseLinePoint(new Point2D(hullGraphicPane.getWidth() / 2, hullGraphicPane.getHeight()), isMouseInAddingKnotPointZone(halfWidth));
             mouseXTrackerLine.setStartY(1);
             mouseXTrackerLine.setEndY(hullViewAnchorPane.getHeight() - 1);
         }
@@ -186,10 +206,10 @@ public class HullBuilderController implements Initializable {
     /**
      * Updates the hull curve overlay to show regions between control points in each section.
      * The overlays are added to a dedicated `overlayPane` above the `hullGraphicPane`.
-     * @return a list of x-intervals where the overlays were added (in function space, NOT graphic space)
+     * a list of x-intervals where the overlays were added (in function space, NOT graphic space) is added to state
      */
-    private List<Section> updateSectionsEditorHullCurveOverlay() {
-        List<Section> overlaySections = new ArrayList<>();
+    private void updateSectionsEditorHullCurveOverlay() {
+        List<Range> overlaySections = new ArrayList<>();
         boolean enableOverlays = !(hullGraphic.getChildren().getLast() instanceof CurvedGraphic);
         // Remove all CurvedGraphic overlays by iterating backwards through hullGraphic's children
         if (!enableOverlays) {
@@ -206,52 +226,62 @@ public class HullBuilderController implements Initializable {
                     throw new IllegalArgumentException("Can only work with Bezier Hulls");
 
                 // Determine the x-range between the control points, which acts as the free section to place a knot point
+                Range overlaySection;
                 double lControlX = bezier.getControlX1();
                 double rControlX = bezier.getControlX2();
-                Section freeSection = new Section(lControlX, rControlX);
-                if (freeSection.getLength() <= 1e-2) continue;
-                overlaySections.add(freeSection);
-                double maxY = bezier.getMaxValue(freeSection);
-                double minY = bezier.getMinValue(freeSection);
-
-                // Create a CurvedGraphic overlay
-                // Map the overlay rectangle to the corresponding portion of the graphics pane
-                Rectangle validAddKnotRectangle = new Rectangle(
-                        (lControlX / hull.getLength()) * hullGraphicPane.getWidth(),
-                        (minY / -hull.getMaxHeight()) * hullGraphicPane.getHeight(),
-                        ((rControlX - lControlX) / hull.getLength()) * hullGraphicPane.getWidth(),
-                        ((Math.abs(maxY - minY)) / -hull.getMaxHeight()) * hullGraphicPane.getHeight()
-                );
-                CurvedGraphic overlayCurve = new CurvedGraphic(bezier, new Section(lControlX, rControlX), validAddKnotRectangle, false);
-                overlayCurve.getLinePath().setStrokeWidth(2.0);
-                overlayCurve.recolor(true);
-                overlayCurves.add(overlayCurve);
+                if (Math.abs(rControlX - lControlX) <= 1e-2)
+                    continue;
+                else if (rControlX - lControlX <= 1e-2)
+                    overlaySection = new Range(lControlX, rControlX);
+                else {
+                    overlaySection = new Range(lControlX, rControlX);
+                    double maxY = bezier.getMaxValue(new Section(lControlX, rControlX));
+                    double minY = bezier.getMinValue(new Section(lControlX, rControlX));
+                    Rectangle validAddKnotRectangle = new Rectangle(
+                            (lControlX / hull.getLength()) * hullGraphicPane.getWidth(),
+                            (minY / -hull.getMaxHeight()) * (sharkBaitSideViewPanelHeight * (hull.getMaxHeight() / sharkBaitHull.getMaxHeight())),
+                            ((rControlX - lControlX) / hull.getLength()) * hullGraphicPane.getWidth(),
+                            ((Math.abs(maxY - minY)) / -hull.getMaxHeight()) * (sharkBaitSideViewPanelHeight * (hull.getMaxHeight() / sharkBaitHull.getMaxHeight()))
+                    );
+                    CurvedGraphic overlayCurve = new CurvedGraphic(bezier, new Section(lControlX, rControlX), validAddKnotRectangle, false);
+                    overlayCurve.getLinePath().setStrokeWidth(2.0);
+                    overlayCurve.recolor(true);
+                    overlayCurves.add(overlayCurve);
+                }
+                overlaySections.add(overlaySection);
             }
             overlayCurves.forEach(overlay -> overlay.setViewOrder(0));
             IntStream.range(0, 2).forEach(i -> hullGraphic.getChildren().get(i).setViewOrder(1));
             IntStream.range(2, hullGraphic.getChildren().size()).forEach(i -> hullGraphic.getChildren().get(i).setViewOrder(-1));
             overlayCurves.forEach(hullGraphic.getChildren()::add);
         }
-        return overlaySections;
+        this.overlaySections = overlaySections;
     }
 
     /**
      * Displays the intersection point on the hull view pane.
      * @param position The position of the intersection point in the hull view pane's local coordinate space.
      */
-    private void updateMouseLinePoint(Point2D position) {
-        // Initialize the intersection point if it doesn't exist
+    private void updateMouseLinePoint(Point2D position, boolean pointElseXMark) {
         if (!intersectionPointPane.getChildren().contains(intersectionPoint)) {
             intersectionPoint = new Circle(5);
             intersectionPoint.setFill(ColorPaletteService.getColor("white"));
             intersectionPointPane.getChildren().add(intersectionPoint);
         }
-
-        // Update the position and make it visible
-        intersectionPoint.setCenterX(position.getX());
-        intersectionPoint.setCenterY(position.getY());
-        intersectionPoint.setOpacity(1.0);
+        if (pointElseXMark) {
+            intersectionXMark.setOpacity(0);
+            intersectionPoint.setCenterX(position.getX());
+            intersectionPoint.setCenterY(position.getY());
+            intersectionPoint.setOpacity(1.0);
+        }
+        else {
+            intersectionPoint.setOpacity(0);
+            intersectionXMark.setLayoutX(position.getX());
+            intersectionXMark.setLayoutY(position.getY());
+            intersectionXMark.setOpacity(1.0);
+        }
     }
+
 
     /**
      * Display if the user is hovering their mouse in a section to add or delete a knot point
@@ -268,7 +298,7 @@ public class HullBuilderController implements Initializable {
      * Check if we are in a position to add, or delete a knot point in section editor mode
      * @param mouseX the x position of the mouse
      */
-    private boolean isInAddingKnotPointRange(double mouseX) {
+    private boolean isMouseInAddingKnotPointZone(double mouseX) {
         if (!sectionEditorEnabled) return false;
         if (mouseX >= hullGraphicPane.getLayoutX() && mouseX <= hullGraphicPane.getLayoutX() + hullGraphicPane.getWidth()) {
             double poiX = mouseX - hullGraphicPane.getLayoutX();
@@ -286,14 +316,19 @@ public class HullBuilderController implements Initializable {
     public void setSideViewHullGraphic(Hull hull) {
         // Set and layout parent pane
         double sideViewPanelWidth = 700;
-        double sideViewPanelHeight = 45;
+        double sideViewPanelHeight = sharkBaitSideViewPanelHeight * (hull.getMaxHeight() / sharkBaitHull.getMaxHeight());
         double paneX = hullViewAnchorPane.prefWidth(-1) / 2 - sideViewPanelWidth / 2;
-        double paneY = hullViewAnchorPane.prefHeight(-1) / 2 - sideViewPanelHeight / 2;
+        double paneY = hullViewAnchorPane.prefHeight(-1) / 2 - sharkBaitSideViewPanelHeight / 2;
         hullGraphicPane.setPrefSize(sideViewPanelWidth, sideViewPanelHeight);
         hullGraphicPane.setMaxSize(sideViewPanelWidth, sideViewPanelHeight);
         hullGraphicPane.setMinSize(sideViewPanelWidth, sideViewPanelHeight);
         hullGraphicPane.setLayoutX(paneX);
         hullGraphicPane.setLayoutY(paneY);
+        if (intersectionPointPane != null) {
+            intersectionPointPane.setPrefHeight(sideViewPanelHeight);
+            intersectionPointPane.setMaxHeight(sideViewPanelHeight);
+            intersectionPointPane.setMinHeight(sideViewPanelHeight);
+        }
 
         // Setup graphic
         Rectangle rect = new Rectangle(0, 0, sideViewPanelWidth, sideViewPanelHeight);
@@ -313,10 +348,8 @@ public class HullBuilderController implements Initializable {
         applyGraphicsViewingState();
 
         // Keep the selected hull section colored
-        if (selectedHullSection != null) {
-            int selectedIndex = hull.getHullSections().indexOf(selectedHullSection);
-            hullGraphic.colorBezierPointGroup(selectedIndex, true);
-        }
+        if (selectedHullSection != null && selectedHullSectionIndex != -1)
+            hullGraphic.colorBezierPointGroup(selectedHullSectionIndex, true);
     }
 
     /**
@@ -414,15 +447,8 @@ public class HullBuilderController implements Initializable {
      * Calculates and sets the knob values in polar coordinates, for when a user goes to the next/prev section
       */
     private void setKnobValues() {
-        if (!(selectedHullSection.getSideProfileCurve() instanceof CubicBezierFunction bezier))
-            throw new IllegalArgumentException("Cannot work in Hull Builder with non-bezier hull curve");
-
-        List<Point2D> knotAndControlPoints = bezier.getKnotAndControlPoints();
-        Point2D polarL = CalculusUtils.toPolar(knotAndControlPoints.get(1), knotAndControlPoints.get(0));
-        Point2D polarR = CalculusUtils.toPolar(knotAndControlPoints.get(2), knotAndControlPoints.get(3));
-        List<Double> knobValues = List.of(polarL.getX(), polarL.getY(), polarR.getX(), polarR.getY());
-
         // Batch update values, add back listeners
+        List<Double> knobValues = HullGeometryService.getPolarParameterValues();
         for (int i = 0; i < knobs.size(); i++) {knobs.get(i).valueProperty().removeListener(knobListeners.get(i));}
         for (int i = 0; i < knobs.size(); i++) {knobs.get(i).setKnobValue(knobValues.get(i));}
         for (int i = 0; i < knobs.size(); i++) {knobs.get(i).valueProperty().addListener(knobListeners.get(i));}
@@ -433,7 +459,7 @@ public class HullBuilderController implements Initializable {
      * Thus, if we update r, we must adjust the θ bounds, and vice versa.
      */
     @Traceable
-    private void setSiblingKnobBounds(int knobIndex, double currTheta) {
+    private void setSiblingKnobBounds(int knobIndex, double siblingTheta) {
         int siblingIndex = switch (knobIndex) {
             case 0 -> 1; // rL -> θL
             case 1 -> 0; // θL -> rL
@@ -447,33 +473,13 @@ public class HullBuilderController implements Initializable {
         double r = knobs.get((knobIndex < 2) ? 0 : 2).getValue();
         double theta = knobs.get((knobIndex < 2) ? 1 : 3).getValue();
 
-        // Get the corresponding knot point
-        CubicBezierFunction bezier = (CubicBezierFunction) selectedHullSection.getSideProfileCurve();
-        Point2D knot = (knobIndex < 2) ? bezier.getKnotPoints().getFirst() : bezier.getKnotPoints().getLast();
-
-        // Update bounds for the sibling knob
+        // Delegate logic to HullGeometryService
         if (knobIndex % 2 == 0) { // Updating r, adjust θ bounds
-            double[] thetaBounds = calculateThetaBounds(knot, r, currTheta, knobIndex == 0, false, selectedHullSectionIndex);
-
-            // Apply adjacent section theta bounds if applicable (returns null if the knot is an edge knot)
-            double[] additionalThetaBounds = calculateAdjacentSectionThetaBounds(knot, knobIndex == 0, currTheta);
-            double minTheta = additionalThetaBounds != null
-                    ? Math.max(thetaBounds[0], additionalThetaBounds[0])
-                    : thetaBounds[0];
-            double maxTheta = additionalThetaBounds != null
-                    ? Math.max(Math.min(thetaBounds[1], additionalThetaBounds[1]), minTheta)
-                    : Math.max(thetaBounds[1], minTheta);
-
-            // This prevents the user the ignore the bounds if they hold down the plus/minus knob button
-            // Essentially clipping the last 0.5 of a degree off the bounds as a buffer
-            // This leaves some wiggle room on the theta bounds which we want to remove to prevent increasing past the bounds
-            double adjustedMinTheta = Math.abs(minTheta - currTheta) < 0.5 ? currTheta : minTheta;
-            double adjustedMaxTheta = Math.abs(maxTheta - currTheta) < 0.5 ? currTheta : maxTheta;
-
-            siblingKnob.setKnobMin(adjustedMinTheta);
-            siblingKnob.setKnobMax(adjustedMaxTheta);
+            double[] thetaBounds = HullGeometryService.calculateSiblingThetaBounds(knobIndex, siblingTheta, r);
+            siblingKnob.setKnobMin(thetaBounds[0]);
+            siblingKnob.setKnobMax(thetaBounds[1]);
         } else { // Updating θ, adjust r bounds
-            double rMax = calculateMaxR(knot, theta, selectedHullSectionIndex);
+            double rMax = HullGeometryService.calculateSiblingRMax(knobIndex, theta);
             siblingKnob.setKnobMax(rMax);
         }
     }
@@ -482,295 +488,18 @@ public class HullBuilderController implements Initializable {
      * Sets the bounds of the knobs so that the control points stay in the rectangle bounded by:
      * x = 0, x = L, y = 0, y = -h.
      * The height h comes from the front view and corresponds to the lowest y-value of the knot point.
-     *
      * MUST BE DONE AFTER SETTING KNOB VALUES WHEN SWITCHING SECTIONS
      */
     private void setKnobBounds() {
-        // Validation
-        if (!(selectedHullSection.getSideProfileCurve() instanceof CubicBezierFunction bezier))
-            throw new IllegalArgumentException("Cannot work with non-bezier hull curve");
-
-        // Get bezier knot points
-        List<Point2D> knotPoints = bezier.getKnotPoints();
-        Point2D lKnot = knotPoints.getFirst();
-        Point2D rKnot = knotPoints.getLast();
-
-        // Get r and theta values
-        Point2D polarL = CalculusUtils.toPolar(new Point2D(bezier.getControlX1(), bezier.getControlY1()), lKnot);
-        Point2D polarR = CalculusUtils.toPolar(new Point2D(bezier.getControlX2(), bezier.getControlY2()), rKnot);
-        double rL = polarL.getX();
-        double rR = polarR.getX();
-        double thetaL = polarL.getY();
-        double thetaR = polarR.getY();
-
-        // Calculate r and theta bounds for the control point to stay in the rectangle
-        double rMin = 0.001;
-        double rLMax = calculateMaxR(lKnot, thetaL, selectedHullSectionIndex);
-        double rRMax = calculateMaxR(rKnot, thetaR, selectedHullSectionIndex);
-        double[] thetaLBounds = calculateThetaBounds(lKnot, rL, thetaL, true, true, selectedHullSectionIndex);
-        double thetaLMin = thetaLBounds[0];
-        double thetaLMax = thetaLBounds[1];
-        double[] thetaRBounds = calculateThetaBounds(rKnot, rR, thetaR, false, true, selectedHullSectionIndex);
-        double thetaRMin = thetaRBounds[0];
-        double thetaRMax = thetaRBounds[1];
-
-        // Set bounds
-        knobs.get(0).setKnobMin(rMin);
-        knobs.get(0).setKnobMax(rLMax);
-        knobs.get(1).setKnobMin(thetaLMin);
-        knobs.get(1).setKnobMax(thetaLMax);
-        knobs.get(2).setKnobMin(rMin);
-        knobs.get(2).setKnobMax(rRMax);
-        knobs.get(3).setKnobMin(thetaRMin);
-        knobs.get(3).setKnobMax(thetaRMax);
-    }
-
-    /**
-     * Calculates the maximum radius (r) such that a point at (r, theta) from an origin/knot (xO, yO)
-     * remains within the rectangular bounds defined by x = 0, x = L, y = 0, y = -h.
-     *
-     * @param knot the knot point which acts as the origin
-     * @param thetaKnown the known angle in degrees (relative to the origin) at which the point lies.
-     * @param hullSectionIndex the index of the hullSection in the hull in which to bound the radius
-     * @return The maximum radius (r) such that the point stays within the bounds.
-     */
-    public double calculateMaxR(Point2D knot, double thetaKnown, int hullSectionIndex) {
-        HullSection hullSection = hull.getHullSections().get(hullSectionIndex);
-        double hullHeight = -hull.getMaxHeight();
-        CubicBezierFunction bezier = (CubicBezierFunction) hullSection.getSideProfileCurve();
-        double xL = bezier.getX1();
-        double xR = bezier.getX2();
-
-        double rMax = Double.MAX_VALUE;
-        double thetaRad = Math.toRadians((thetaKnown + 90) % 360);
-        double cosTheta =  Math.cos(thetaRad);
-        double sinTheta = Math.sin(thetaRad);
-        double approximatelyZeroRadians = Math.toRadians(OPEN_INTERVAL_TOLERANCE);
-
-        // Use CAST rule to determine which rectangle boundaries to calculate rMax
-        // Edge cases of 0/90/180/270/360 handled appropriately
-        double sinOfApproximatelyZeroRadians = Math.sin(approximatelyZeroRadians);
-        if (Math.abs(sinTheta) != Math.abs(sinOfApproximatelyZeroRadians)) {
-            if (cosTheta < 0) {
-                double rFromLeft = (knot.getX() - xL) / -cosTheta;
-                rMax = Math.min(rMax, rFromLeft);
-            } else if (cosTheta > 0) {
-                double rFromRight = (xR - knot.getX()) / cosTheta;
-                rMax = Math.min(rMax, rFromRight);
-            }
-        }
-        double cosOfApproximatelyZeroRadians = Math.cos(approximatelyZeroRadians);
-        if (Math.abs(cosTheta) != Math.abs(cosOfApproximatelyZeroRadians)) {
-            if (sinTheta < 0) {
-                double rFromBottom = (hullHeight - knot.getY()) / sinTheta;
-                rMax = Math.min(rMax, rFromBottom);
-            } else if (sinTheta > 0) {
-                double rFromTop = -knot.getY() / sinTheta;
-                rMax = Math.min(rMax, rFromTop);
-            }
-        }
-
-       return Math.max(0, rMax);
-    }
-
-    /**
-     * Returns the allowable angular range for a control point on a circle within a bounding rectangle.
-     * Merges constraints from adjacent hull sections if needed, and applies a small tolerance so the range
-     * does not collapse. If it does collapse, the range is set to a single value.
-     *
-     * @param knot The reference point for polar coordinates
-     * @param rKnown The radial distance from the knot to the control point
-     * @param currTheta The current angle (in degrees)
-     * @param isLeft True if the control point is on the left side (180–360 degrees), false otherwise (0–180)
-     * @param boundWithAdjacentSections True if the range should account for constraints from adjacent sections
-     * @param hullSectionIndex The index of the hull section to process for bounding
-     * @return A two-element array containing the minimum and maximum valid theta values
-     */
-    public double[] calculateThetaBounds(Point2D knot, double rKnown, double currTheta, boolean isLeft, boolean boundWithAdjacentSections, int hullSectionIndex) {
-        HullSection hullSection = hull.getHullSections().get(hullSectionIndex);
-        double l = hullSection.getLength();
-        double h = -hull.getMaxHeight();
-        Rectangle boundingRect = new Rectangle(hullSection.getX(), 0.0, l, h);
-
-        double[] rawThetaBounds = calculateRawThetaBounds(boundingRect, knot, rKnown, isLeft, currTheta);
-        double minTheta = rawThetaBounds[0];
-        double maxTheta = rawThetaBounds[1];
-
-        if (boundWithAdjacentSections) {
-            double[] additionalThetaBounds = calculateAdjacentSectionThetaBounds(knot, isLeft, currTheta);
-            minTheta = additionalThetaBounds != null
-                    ? Math.max(minTheta, additionalThetaBounds[0])
-                    : minTheta;
-            maxTheta = additionalThetaBounds != null
-                    ? Math.min(maxTheta, additionalThetaBounds[1])
-                    : maxTheta;
-            if (maxTheta < minTheta) maxTheta = minTheta;
-        }
-
-        if (Math.abs(minTheta - maxTheta) < 1e-2) {
-            double avg = 0.5 * (minTheta + maxTheta);
-            return new double[] {avg, avg};
-        }
-
-        if (Math.abs(minTheta - currTheta) <= OPEN_INTERVAL_TOLERANCE) minTheta = currTheta;
-        else minTheta += OPEN_INTERVAL_TOLERANCE;
-        if (Math.abs(maxTheta - currTheta) <= OPEN_INTERVAL_TOLERANCE) maxTheta = currTheta;
-        else maxTheta -= OPEN_INTERVAL_TOLERANCE;
-        return new double[] {minTheta, maxTheta};
-    }
-
-    /**
-     * Finds the valid range of angles where a control point on a circle stays within the specified rectangle.
-     * Determines the domain based on whether it's the left side (180–360) or the right side (0–180),
-     * then solves circle-rectangle intersections and selects the smallest segment containing currTheta.
-     *
-     * @param boundingRect The rectangle bounding the control point
-     * @param center The circle's center
-     * @param radius The circle's radius
-     * @param isLeft True if searching 180–360, false if 0–180
-     * @param currTheta The current angle (in degrees) for which to constrain the range
-     * @return An array with [minTheta, maxTheta] that confines the control point within the rectangle
-     */
-    private double[] calculateRawThetaBounds(Rectangle boundingRect, Point2D center, double radius, boolean isLeft, double currTheta) {
-        // Initialize the search domain
-        double thetaMin = isLeft ? 180 : 0;
-        double thetaMax = isLeft ? 360 : 180;
-
-        // Rectangle Bounds
-        double xMin = boundingRect.getX();
-        double xMax = xMin + boundingRect.getWidth();
-        double yMax = boundingRect.getY();
-        double yMin = yMax + boundingRect.getHeight(); // negative height
-
-        // Build candidate angle bounds list alpha_i as POIs of the rectangle and circular arc
-        // Circle formed by sweeping the search domain at the given radius
-        List<Double> angles = new ArrayList<>();
-        addIntersectionAngles(angles, center, radius, xMin, true);
-        addIntersectionAngles(angles, center, radius, xMax, true);
-        addIntersectionAngles(angles, center, radius, yMin, false);
-        addIntersectionAngles(angles, center, radius, yMax, false);
-        angles = angles.stream().map(x -> ((x % 360) + 360) % 360).filter(x -> (x > thetaMin && x < thetaMax)).sorted().toList();
-
-
-        // Handle cases for number of POIs alpha_i
-        int n = angles.size();
-        if (n == 0) return new double[] {thetaMin, thetaMax};
-        if (n == 2) return new double[] {angles.getFirst(), angles.getLast()};
-        else if (n == 1) {
-            double alpha = angles.getFirst();
-            if (currTheta < alpha) {
-                double mid = 0.5 * (thetaMin + alpha);
-                if (isPointInBounds(radius, mid, center, boundingRect)) return new double[] {thetaMin, alpha};
-                else return new double[] {alpha, thetaMax};
-            } else {
-                double mid = 0.5 * (alpha + thetaMax);
-                if (isPointInBounds(radius, mid, center, boundingRect)) return new double[] {alpha, thetaMax};
-                else return new double[] {thetaMin, alpha};
-            }
-        }
-        // > 2 POIs found, find the range containing currTheta
-        else {
-            for (int i = 0; i < n - 1; i++) {
-                double start = angles.get(i);
-                double end = angles.get(i + 1);
-                if (currTheta >= start && currTheta <= end) return new double[] {start, end};
-            }
-            return new double[] {thetaMin, thetaMax};
-        }
-    }
-
-    /**
-     * Finds intersection angles for a circle and a vertical (x=val) or horizontal (y=val) line.
-     * The angles are calculated using the calculus convention where the 0-degree reference is shifted 90 degrees forward.
-     *
-     * @param angles List to store the calculated angles.
-     * @param knot The center of the circle.
-     * @param r The radius of the circle.
-     * @param lineVal The value of the vertical or horizontal line (x or y).
-     * @param isX True for vertical line (x=val), false for horizontal line (y=val).
-     */
-    private void addIntersectionAngles(List<Double> angles, Point2D knot, double r, double lineVal, boolean isX) {
-        double knot1 = isX ? knot.getX() : knot.getY();
-        double knot2 = isX ? knot.getY() : knot.getX();
-        double distance = lineVal - knot1;
-        double sq = r * r - distance * distance;
-
-        // Required condition for intersection angles
-        if (sq >= 0) {
-            double tolerance = 1e-8 * r * r;
-            if (Math.abs(sq) < tolerance) { // Numerical tangency, only one intersection point
-                double angle = CalculusUtils.toPolar(isX ? new Point2D(lineVal, knot2) : new Point2D(knot2, lineVal), knot).getY();
-                angles.add(angle);
-            } else { // There must be exactly 2 intersection points
-                double root = Math.sqrt(sq);
-                double intersect1 = knot2 + root;
-                double intersect2 = knot2 - root;
-                angles.add(CalculusUtils.toPolar(isX ? new Point2D(lineVal, intersect1) : new Point2D(intersect1, lineVal), knot).getY());
-                angles.add(CalculusUtils.toPolar(isX ? new Point2D(lineVal, intersect2) : new Point2D(intersect2, lineVal), knot).getY());
-            }
-        }
-    }
-
-    /**
-     * Checks if a control point, specified in polar coordinates, lies within the bounds of a given rectangle.
-     * @param rKnown The radius of the control point in polar coordinates.
-     * @param thetaGuess The angle (in radians) of the control point in polar coordinates.
-     * @param knot The knot point (reference point) to which the polar coordinates are relative.
-     * @return True if the control point lies within the bounds of the rectangle;
-     */
-    private boolean isPointInBounds(double rKnown, double thetaGuess, Point2D knot, Rectangle boundingRect) {
-        // Convert polar to Cartesian
-        Point2D cartesianControl = CalculusUtils.toCartesian(new Point2D(rKnown, thetaGuess), knot);
-        double xControl = cartesianControl.getX();
-        double yControl = cartesianControl.getY();
-
-        // Rectangle bounds
-        double xMin = boundingRect.getX();
-        double xMax = xMin + boundingRect.getWidth();
-        double yMax = boundingRect.getY();
-        double yMin = yMax + boundingRect.getHeight(); // negative height
-
-        // Fix floating point proximity
-        if (Math.abs(xControl - xMin) < 1e-6) xControl = xMin;
-        if (Math.abs(xControl - xMax) < 1e-6) xControl = xMax;
-        if (Math.abs(yControl - yMin) < 1e-6) yControl = yMin;
-        if (Math.abs(yControl - yMax) < 1e-6) yControl = yMax;
-
-        // Check standard rectangle inclusion
-        return (xControl >= xMin && xControl <= xMax &&
-                yControl >= yMin && yControl <= yMax);
-    }
-
-    /**
-     * Calculates additional theta bounds based on adjacent sections' control points to ensure smoothness and continuity.
-     *
-     * @param knot the knot point which acts as the origin
-     * @param isLeft whether the control point belongs to the left knot or right knot
-     * @param currTheta, the current theta value before the updated geometry, of the original section (NOT the adjacent section)
-     * @return [additionalMinTheta, additionalMaxTheta], or null for an edge knot (the first and last knot with no adjacent sections they are shared with)
-     */
-    private double[] calculateAdjacentSectionThetaBounds(Point2D knot, boolean isLeft, double currTheta) {
-        double thetaMin = isLeft ? 180 : 0;
-        double thetaMax = isLeft ? 360 : 180;
-
-        int adjacentHullSectionIndex = selectedHullSectionIndex + (isLeft ? -1 : 1);
-        boolean hasAdjacentSection = isLeft
-                ? selectedHullSectionIndex > 0
-                : selectedHullSectionIndex < hull.getHullSections().size() - 1;
-
-        if (hasAdjacentSection) {
-            HullSection adjacentHullSection = hull.getHullSections().get(adjacentHullSectionIndex);
-            Point2D siblingPoint = isLeft
-                    ? ((CubicBezierFunction) adjacentHullSection.getSideProfileCurve()).getControlPoints().getLast()
-                    : ((CubicBezierFunction) adjacentHullSection.getSideProfileCurve()).getControlPoints().getFirst();
-            double siblingPointR = CalculusUtils.toPolar(siblingPoint, knot).getX();
-            double[] thetaBounds = calculateThetaBounds(knot, siblingPointR, (currTheta + 180) % 360, !isLeft, false, adjacentHullSectionIndex);
-
-            thetaMin = Math.max(thetaMin, (thetaBounds[0] + 180) % 360);
-            thetaMax = Math.min(thetaMax, (thetaBounds[1] + 180) % 360);
-            return new double[] {thetaMin, thetaMax};
-        }
-        else return null;
+        double[] bounds = HullGeometryService.calculateParameterBounds();
+        knobs.get(0).setKnobMin(bounds[0]); // rL min
+        knobs.get(0).setKnobMax(bounds[1]); // rL max
+        knobs.get(1).setKnobMin(bounds[2]); // thetaL min
+        knobs.get(1).setKnobMax(bounds[3]); // thetaL max
+        knobs.get(2).setKnobMin(bounds[4]); // rR min
+        knobs.get(2).setKnobMax(bounds[5]); // rR max
+        knobs.get(3).setKnobMin(bounds[6]); // thetaR min
+        knobs.get(3).setKnobMax(bounds[7]); // thetaR max
     }
 
     /**
@@ -789,10 +518,10 @@ public class HullBuilderController implements Initializable {
      * Used before setting the knob values to prevent setting the knob values out of bounds
      */
     public void unboundKnobs() {
-        double minR = OPEN_INTERVAL_TOLERANCE;
+        double minR = HullGeometryService.OPEN_INTERVAL_TOLERANCE;
         double maxPossibleR = hull.getLength();
-        double minPossibleTheta = OPEN_INTERVAL_TOLERANCE;
-        double maxPossibleTheta = 360 - OPEN_INTERVAL_TOLERANCE;
+        double minPossibleTheta = HullGeometryService.OPEN_INTERVAL_TOLERANCE;
+        double maxPossibleTheta = 360 - HullGeometryService.OPEN_INTERVAL_TOLERANCE;
 
         for (int i = 0; i < knobs.size(); i++) {
             knobs.get(i).valueProperty().removeListener(knobListeners.get(i));
@@ -837,9 +566,6 @@ public class HullBuilderController implements Initializable {
      * Updates the knot and control points of the selected hull section and its graphic
      * Updates the section properties panel
      * Updates associated knob bounds in r-theta pair
-     *
-     * IMPORTANT DISTINCTION:
-     *
      * In order to maintain C1 smoothness, the angle must match for both sides of all bezier handles.
      * Since handles lie of the edges of sections, adjusting a handle requires moving the control point in the adjacent section
      * Thus we differentiate between the data of the selected and adjacent hull sections
@@ -854,114 +580,18 @@ public class HullBuilderController implements Initializable {
         // Update the relevant knob value
         knobs.get(knobIndex).setKnobValue(newROrThetaVal);
 
-        // Get current knob values
-        double selectedRL = knobs.get(0).getValue();
-        double selectedThetaL = knobs.get(1).getValue();
-        double selectedRR = knobs.get(2).getValue();
-        double selectedThetaR = knobs.get(3).getValue();
+        // Update the model
+        double[] knobValues = knobs.stream().mapToDouble(Knob::getValue).toArray();
+        hull = HullGeometryService.updateHullParameter(knobIndex, newROrThetaVal, knobValues);
 
-        // Update the relevant control point from polar coordinates
-        List<Point2D> selectedKnotPoints = ((CubicBezierFunction) selectedHullSection.getSideProfileCurve()).getKnotPoints();
-        Point2D selectedLKnot = selectedKnotPoints.getFirst();
-        Point2D selectedRKnot = selectedKnotPoints.getLast();
-        CubicBezierFunction selectedBezier = (CubicBezierFunction) selectedHullSection.getSideProfileCurve();
-        if (knobIndex == 0 || knobIndex == 1) { // Left control point
-            Point2D lControl = CalculusUtils.toCartesian(new Point2D(selectedRL, selectedThetaL), selectedLKnot);
-            selectedBezier.setControlX1(lControl.getX());
-            selectedBezier.setControlY1(lControl.getY());
-        } else if (knobIndex == 2 || knobIndex == 3) { // Right control point
-            Point2D rControl = CalculusUtils.toCartesian(new Point2D(selectedRR, selectedThetaR), selectedRKnot);
-            selectedBezier.setControlX2(rControl.getX());
-            selectedBezier.setControlY2(rControl.getY());
-        }
-
-        // When changing theta we need to adjust adjacent sections to maintain C1 smoothness
-        // Calculate new control point in Cartesian coordinates, derived by adjusting the angle (theta)
-        // while keeping the distance (radius) constant relative to selectedLKnot.
-        boolean adjustingLeftAdjacentSection = knobIndex == 1 && selectedHullSectionIndex != 0;
-        boolean adjustingRightAdjacentSection = knobIndex == 3 && selectedHullSectionIndex != (hull.getHullSections().size() - 1);
-
-        // Compute deltas for the adjacent control point
-        if (adjustingLeftAdjacentSection || adjustingRightAdjacentSection) {
-            int adjacentHullSectionIndex = selectedHullSectionIndex + (adjustingLeftAdjacentSection ? -1 : 1);
-            HullSection adjacentHullSection = hull.getHullSections().get(adjacentHullSectionIndex);
-            Point2D selectedKnot = adjustingLeftAdjacentSection ? selectedLKnot : selectedRKnot;
-            Point2D deltas = calculateAdjacentControlDeltas(adjacentHullSection, adjustingLeftAdjacentSection, newROrThetaVal, selectedKnot);
-            double deltaX = deltas.getX();
-            double deltaY = deltas.getY();
-
-            // Propagate the change to the adjacent control point
-            HullSection adjustedAdjacentSection = adjustAdjacentSectionControlPoint(
-                    adjacentHullSection, knobIndex == 1, deltaX, deltaY);
-            hull.getHullSections().set(adjacentHullSectionIndex, adjustedAdjacentSection);
-        }
-
-        // Update UI
+        // Update UI with new hull
         hullGraphicPane.getChildren().clear();
         setSideViewHullGraphic(hull);
         recalculateAndDisplayHullProperties();
 
-        double currTheta = (knobIndex == 0 || knobIndex == 1) ? selectedThetaL : selectedThetaR;
-        setSiblingKnobBounds(knobIndex, currTheta);
-    }
-
-    /**
-     * Adjusts the control points of the adjacent hull sections to maintain C1 continuity.
-     * @param adjacentSection the adjacent section (either on the left or right) to adjust
-     *                        the correct section must be passed in, this logic is not in the method
-     * @param adjustLeftOfSelected whether to adjust the adjacent left section (otherwise right)
-     * @param deltaX the amount by which to adjust the control point x in the adjacent section
-     * @param deltaY the amount by which to adjust the control point y in the adjacent section
-     */
-    private HullSection adjustAdjacentSectionControlPoint(HullSection adjacentSection, boolean adjustLeftOfSelected, double deltaX, double deltaY) {
-        CubicBezierFunction adjacentBezier = (CubicBezierFunction) adjacentSection.getSideProfileCurve();
-
-        // Adjust the control point by the delta
-        if (adjustLeftOfSelected) {
-            adjacentBezier.setControlX2(adjacentBezier.getControlX2() + deltaX);
-            adjacentBezier.setControlY2(adjacentBezier.getControlY2() + deltaY);
-        } else {
-            adjacentBezier.setControlX1(adjacentBezier.getControlX1() + deltaX);
-            adjacentBezier.setControlY1(adjacentBezier.getControlY1() + deltaY);
-        }
-
-        // Update the section's side profile curve
-        adjacentSection.setSideProfileCurve(adjacentBezier);
-        return adjacentSection;
-    }
-
-    /**
-     * Computes the new control point and deltas for adjusting the control point of an adjacent hull section
-     * to maintain C1 smoothness. The computation is based on polar coordinate transformations.
-     *
-     * @param adjacentHullSection       The adjacent hull section being adjusted.
-     * @param isLeftAdjacentSection     True if adjusting the left-adjacent section, false otherwise.
-     * @param newThetaVal               The new angle (theta) value for the selected control point.
-     * @param selectedKnot              The knot point used as the reference for polar transformations.
-     * @return A Point2D array where:
-     *         index 0 contains the deltaX,
-     *         index 1 contains the deltaY.
-     */
-    private Point2D calculateAdjacentControlDeltas(HullSection adjacentHullSection, boolean isLeftAdjacentSection, double newThetaVal, Point2D selectedKnot) {
-        // Determine old control point and polar radius (r)
-        Point2D adjacentSectionOldControl;
-        double adjacentSectionRadius;
-        double adjacentSectionNewThetaVal = (newThetaVal + 180) % 360;
-
-        if (isLeftAdjacentSection)
-            adjacentSectionOldControl = ((CubicBezierFunction) adjacentHullSection.getSideProfileCurve()).getControlPoints().getLast();
-        else
-            adjacentSectionOldControl = ((CubicBezierFunction) adjacentHullSection.getSideProfileCurve()).getControlPoints().getFirst();
-        adjacentSectionRadius = CalculusUtils.toPolar(adjacentSectionOldControl, selectedKnot).getX();
-
-        // Compute new control point in Cartesian coordinates
-        Point2D adjacentSectionNewControl = CalculusUtils.toCartesian(
-                new Point2D(adjacentSectionRadius, adjacentSectionNewThetaVal), selectedKnot);
-
-        // Calculate and return deltas
-        double deltaX = adjacentSectionNewControl.getX() - adjacentSectionOldControl.getX();
-        double deltaY = adjacentSectionNewControl.getY() - adjacentSectionOldControl.getY();
-        return new Point2D(deltaX, deltaY);
+        // Update sibling knob bounds
+        double siblingTheta = knobs.get((knobIndex % 2 == 0) ? knobIndex + 1 : knobIndex - 1).getValue();
+        setSiblingKnobBounds(knobIndex, siblingTheta);
     }
 
     /**
@@ -1094,6 +724,7 @@ public class HullBuilderController implements Initializable {
         // Only perform computations if the sections editor is enabled
         if (!sectionEditorEnabled) {
             if (intersectionPoint != null) intersectionPoint.setOpacity(0);
+            if (intersectionXMark != null) intersectionXMark.setOpacity(0);
             return;
         }
 
@@ -1105,7 +736,7 @@ public class HullBuilderController implements Initializable {
         mouseXTrackerLine.setStartY(0);
         mouseXTrackerLine.setEndY(paneHeight - 1);
         updateHullIntersectionPoint(mouseX);
-        updateAddingKnotTitleLabel(isInAddingKnotPointRange(mouseX));
+        updateAddingKnotTitleLabel(isMouseInAddingKnotPointZone(mouseX));
     }
 
     /**
@@ -1125,7 +756,7 @@ public class HullBuilderController implements Initializable {
             functionSpaceY = bezier.value(functionSpaceX);
             double poiY = (functionSpaceY / hull.getLength()) * hullGraphicPane.getWidth();
             Point2D poi = new Point2D(poiX, -poiY);
-            updateMouseLinePoint(poi);
+            updateMouseLinePoint(poi, isMouseInAddingKnotPointZone(mouseX));
         }
         else {
             functionSpaceX = null;
@@ -1134,6 +765,7 @@ public class HullBuilderController implements Initializable {
                 intersectionPoint.setOpacity(0);
                 intersectionPoint = null;
             }
+            if (intersectionXMark != null) intersectionXMark.setOpacity(0);
         }
         updateHullIntersectionPointDisplay(functionSpaceX, functionSpaceY);
     }
@@ -1153,8 +785,8 @@ public class HullBuilderController implements Initializable {
             double mouseX = poiX + hullGraphicPane.getLayoutX();
 
             // Determine if in adding or deleting mode and display the appropriate point to add or delete
-            if (!isInAddingKnotPointRange(mouseX)) {
-                Point2D deletableKnotPoint = getDeletableKnotPoint(functionSpaceX);
+            if (!isMouseInAddingKnotPointZone(mouseX)) {
+                Point2D deletableKnotPoint = HullGeometryService.getDeletableKnotPoint(functionSpaceX);
                 if (deletableKnotPoint == null) pointData = nullPointString;
                 else pointData = String.format("(x: %.3f, y: %.3f)", deletableKnotPoint.getX(), deletableKnotPoint.getY());
             } else {
@@ -1174,41 +806,6 @@ public class HullBuilderController implements Initializable {
     }
 
     /**
-     * Finds the deletable knot point for the given function space X-coordinate.
-     * @param functionSpaceX the x coordinate of the point, in function space (not graphics space)
-     * @return a Point2D containing the x and y coordinates of the deletable knot point
-     * @throws RuntimeException if no valid knot point is found
-     */
-    private Point2D getDeletableKnotPoint(double functionSpaceX) {
-        // Iterate through the overlay sections to construct the "deleting section"
-        for (int i = 1; i < overlaySections.size(); i++) { // Start at 1 to access the previous section
-            Section prevSection = overlaySections.get(i - 1);
-            Section currSection = overlaySections.get(i);
-
-            // Create the deleting section using the rx of the previous and x of the current section
-            Section deletingSection = new Section(prevSection.getRx(), currSection.getX());
-
-            // Check if functionSpaceX falls within this section
-            if (deletingSection.getX() <= functionSpaceX && deletingSection.getRx() >= functionSpaceX) {
-                // Find the knot point corresponding to deletingSection's rx
-                double knotX = hullGraphic.getAllKnotPoints(hullGraphic.getBeziers()).stream()
-                        .mapToDouble(Point2D::getX)
-                        .filter(x -> x >= deletingSection.getX() && x <= deletingSection.getRx())
-                        .findFirst()
-                        .orElseThrow(() -> new RuntimeException("Cannot find knot point in the section"));
-
-                // Get the y-coordinate of the knot point from the corresponding Bezier curve
-                double knotY = hull.getHullSections().get(i - 1).getSideProfileCurve().value(knotX);
-
-                return new Point2D(knotX, knotY);
-            }
-        }
-        return null;
-    }
-
-
-
-    /**
      * Copies the fields of the source pane for position and dimension into a new pane
      * @param sourcePane the pane to clone the fields from
      * @return the new pane which overlays the original if in the same parent (assuming no styles interfere)
@@ -1226,32 +823,88 @@ public class HullBuilderController implements Initializable {
         return overlayPane;
     }
 
+    private void handleKnotEditingClick(MouseEvent event) {
+        double mouseX = event.getX();
+
+        // Out of bounds
+        if (mouseX < hullGraphicPane.getLayoutX() || mouseX > hullGraphicPane.getLayoutX() + hullGraphicPane.getWidth())
+            return;
+
+        double functionSpaceX = (mouseX - hullGraphicPane.getLayoutX()) / hullGraphicPane.getWidth() * hull.getLength();
+        Point2D knotPointToDelete = HullGeometryService.getDeletableKnotPoint(functionSpaceX);
+
+        // Pass the Point2D knot to the service to delete the point
+        if (knotPointToDelete == null) {
+            if (isMouseInAddingKnotPointZone(mouseX)) {
+                // HullGeometryService.addKnotPoint(knotPointToAdd); // This method remains unchanged
+            }
+        } else if (hull.getHullSections().size() > 2) {
+            Hull updatedHull = HullGeometryService.deleteKnotPoint(knotPointToDelete);
+            if (updatedHull != null) {
+                selectedHullSection = null;
+                selectedHullSectionIndex = -1;
+                nextPressedBefore = false;
+                previousPressedBefore = false;
+                recalculateAndDisplayHullProperties();
+                setSideViewHullGraphic(updatedHull);
+                hull = updatedHull;
+                updateSectionsEditorHullCurveOverlay();
+                mainController.showSnackbar(String.format(
+                        "Knot point deleted successfully: (x = %.3f, y = %.3f)",
+                        knotPointToDelete.getX(),
+                        knotPointToDelete.getY()
+                ));
+            }
+            else {
+                mainController.showSnackbar(String.format(
+                        "Delete knot point error: (x = %.3f, y = %.3f)",
+                        knotPointToDelete.getX(),
+                        knotPointToDelete.getY()
+                ));
+            }
+        }
+        else mainController.showSnackbar("Cannot delete knot point: too few sections");
+    }
+
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
-        // Set the local instance of the main controller
+        // Set controller instances
         setMainController(CanoeAnalysisApplication.getMainController());
-        initModuleToolBarButtons();
+        HullGeometryService.setHullBuilderController(this);
 
         // Layout
+        initModuleToolBarButtons();
         layoutKnobs();
         layoutPanelButtons();
 
         // Set default hull
         hullGraphicPane = new AnchorPane();
-        hull = SharkBaitHullLibrary.generateSharkBaitHullScaledFromBezier(6);
+        hull = sharkBaitHull;
         setSideViewHullGraphic(hull);
         setBlankSectionProperties();
 
         // Sections Editor
-        mouseXTrackerLine = new Line();
-        mouseXTrackerLine.setVisible(false);
-        hullViewAnchorPane.getChildren().addLast(mouseXTrackerLine);
-        poiTitleLabel.setText("");
-        poiDataLabel.setText("");
         intersectionPointPane = new AnchorPane();
         intersectionPointPane.setPickOnBounds(false);
         intersectionPointPane = getOverlayPane(hullGraphicPane);
         hullViewAnchorPane.getChildren().add(intersectionPointPane);
+
+        Line xLine1 = new Line(-5, -5, 5, 5);
+        Line xLine2 = new Line(-5, 5, 5, -5);
+        xLine1.setStroke(ColorPaletteService.getColor("white"));
+        xLine2.setStroke(ColorPaletteService.getColor("white"));
+        xLine1.setStrokeWidth(2);
+        xLine2.setStrokeWidth(2);
+        intersectionXMark = new Group(xLine1, xLine2);
+        intersectionXMark.setOpacity(0);
+        intersectionPointPane.getChildren().add(intersectionXMark);
+
+        mouseXTrackerLine = new Line();
+        mouseXTrackerLine.setVisible(false);
+        hullViewAnchorPane.getChildren().addLast(mouseXTrackerLine);
+
+        poiTitleLabel.setText("");
+        poiDataLabel.setText("");
 
         // Initialize state
         previousPressedBefore = false;
